# wn3

./: .gitignore  Cargo.toml  shell.nix  todo.md
fetch/: Cargo.toml
fetch/examples/: simple.rs
fetch/src/: cache.rs  lib.rs  ratelimit.rs
fetch/tests/: offline.rs
generate/: Cargo.toml  epub.css
generate/examples/: basic.rs  iliad.rs  many_small_chapters.rs
generate/src/: cache.rs  chapter.rs  epub.rs  epubcheck.rs  html_writer.rs  image.rs  jacket.rs  lang.rs  lib.rs  util.rs
generate/src/chapter/: ser.rs  style.rs
generate/src/chapter/ser/: md.rs  xml.rs
generate/src/epub/: book.rs  package.rs  xml.rs
generate/tests/: raven.rs
src/: common.rs  def.rs  example.toml  il.rs  lib.rs  logger.rs  main.rs  overrides.rs  shikka.rs  util.rs
src/def/: langde.rs  sed.rs  urlsel.rs
src/rulesets/: il.rs  mod.rs  shikka.rs  syosetu.rs
