[package]
name = "wn3"
version = "0.1.0"
edition = "2021"

[lib]

[[bin]]
name = "wn3"
path = "src/main.rs"

[dependencies]
scraper = "0.19.1"
fetch = {path = "./fetch"}
generate = {path = "./generate"}
serde = { version = "1.0.204", features = ["derive"] }
toml = "0.8.15"
anyhow = "1.0.86"
regex-lite = "0.1.6"
rusqlite = "0.31.0"
markup5ever = "0.12.0"
clap = { version = "4.5.9", features = ["derive"] }
ego-tree = {git = "https://github.com/gfaster/ego-tree.git"}
ahash = "0.8.11"
url = { version = "2.5.2", features = ["serde"] }
log = "0.4.22"
ureq = "2.10.0"

[patch.crates-io]
ego-tree = {git = "https://github.com/gfaster/ego-tree.git"}
scraper = {git = "https://github.com/gfaster/scraper.git"}

[profile.release]
strip = true
# debug = true

[features]
