[workspace]
resolver = "2"
default-members = ["fetch", "generate", "."]

[package]
name = "wn3"
version = "0.1.0"
edition = "2024"

[lib]

[[bin]]
name = "wn3"
path = "src/main.rs"

[workspace.dependencies]
ahash = "0.8.11"
anyhow = "1.0.86"
log = "0.4.22"
ureq = "2.10.0"
url = { version = "2.5.2", features = ["serde"] }
rusqlite = "0.31.0"

[dependencies]
fetch = {path = "./fetch"}
generate = {path = "./generate"}

ahash.workspace = true
anyhow.workspace = true
log.workspace = true
url.workspace = true
ureq.workspace = true
rusqlite.workspace = true

scraper = "0.20.0"
serde = { version = "1.0.204", features = ["derive"] }
toml = "0.8.15"
regex-lite = "0.1.6"
markup5ever = "0.12.0"
clap = { version = "4.5.9", features = ["derive"] }
ego-tree = {git = "https://github.com/gfaster/ego-tree.git"}

[patch.crates-io]
ego-tree = {git = "https://github.com/gfaster/ego-tree.git"}


[profile.release]
# strip = true
debug = true

[features]

[workspace.lints.rust]
# future-incompatible = "deny"

[workspace.lints.clippy]
allow_attributes_without_reason = "warn"
inefficient_to_string = "warn"
inconsistent_struct_constructor = "warn"
index_refutable_slice = "warn"
map_unwrap_or = "warn"
significant_drop_tightening = "warn"
str_to_string = "warn"
trivial_regex = "warn"
unicode_not_nfc = "deny"
unnested_or_patterns = "warn"
unused_peekable = "warn"
