[workspace]
resolver = "2"
default-members = ["fetch", "generate", "."]

[package]
name = "wn3"
version = "0.1.0"
edition = "2024"

[lib]

[[bin]]
name = "wn3"
path = "src/main.rs"

[workspace.dependencies]
ahash = "0.8.11"
anyhow = "1.0.100"
log = "0.4.29"
ureq = "2.12.1"
url = { version = "2.5.2", features = ["serde"] }
rusqlite = "0.38.0"

[dependencies]
fetch = {path = "./fetch"}
generate = {path = "./generate"}

ahash.workspace = true
anyhow.workspace = true
log.workspace = true
url.workspace = true
ureq.workspace = true
rusqlite.workspace = true

scraper = "0.25.0"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.10"
regex-lite = "0.1.6"
markup5ever = "0.36.0"
clap = { version = "4.5.9", features = ["derive"] }
ego-tree = "0.10.0"

[patch.crates-io]
ego-tree = { git = "https://github.com/rust-scraper/ego-tree.git", rev = "40859c1fd15cff1600b331e736239aa2459d3cb1" }


[profile.release]
# strip = true
debug = true

[features]

[workspace.lints.rust]
# future-incompatible = "deny"

[workspace.lints.clippy]
allow_attributes_without_reason = "warn"
inefficient_to_string = "warn"
inconsistent_struct_constructor = "warn"
index_refutable_slice = "warn"
map_unwrap_or = "warn"
significant_drop_tightening = "warn"
str_to_string = "warn"
trivial_regex = "warn"
unicode_not_nfc = "deny"
unnested_or_patterns = "warn"
unused_peekable = "warn"
