[package]
name = "generate"
version = "0.1.0"
edition = "2024"

[dependencies]
ahash = "0.8.11"
time = {version = "0.3.36", features = ["formatting"] }
zip = {version = "2.1.3", default-features = false, features = ["deflate"]}
fetch = { path = "../fetch" }
bytes = "1.6.0"
anyhow.workspace = true
url.workspace = true
log.workspace = true
bitflags = "2.6.0"

[lib]

[features]

[lints]
workspace = true
