[package]
name = "generate"
version = "0.1.0"
edition = "2024"

[dependencies]
time = {version = "0.3.36", features = ["formatting"] }
zip = {version = "7.0.0", default-features = false, features = ["deflate"]}
fetch = { path = "../fetch" }
bytes = "1.6.0"
ahash.workspace = true
anyhow.workspace = true
url.workspace = true
log.workspace = true
bitflags = "2.6.0"

[lib]

[features]

[lints]
workspace = true
